<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cblue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnInputNew"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_line_chart"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_centerInParent="true"/>
                <ImageButton
                    android:id="@+id/btnHome"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_menu_home"
                    android:contentDescription="Trang chủ"
                    app:tint="@color/blue" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/spinnerChartType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_bg"
                android:layout_marginBottom="16dp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="24dp"/>

            <TableLayout
                android:id="@+id/tableHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">
                <TableRow>
                    <TextView
                        android:text="@string/TableText_Date"
                        android:background="@drawable/header_cell_bg"
                        android:padding="12dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/TableText_Index"
                        android:background="@drawable/header_cell_bg"
                        android:padding="12dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInputNew"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/btnNhapChiSo"
        app:backgroundTint="@color/blue" />
</RelativeLayout>